--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Data_manager_offline_datasets/**
 
 **/.pytest_cache/*
 
+Tuning Binary All (Same URM)/result_experiments
+
 
 # Ignore cython compiled files
 **/Cython/*.pyd
